extentions/nginx/nginx-deploy-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      #tolerations:
      #- key: "CriticalAddonsOnly"
      #  operator: "Exists"
      #  effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
                  - key: 'arch-type'
                    operator: In
                    values:
                      - 'arm64'
      containers:
        - name: nginx-container
          image: public.ecr.aws/nginx/nginx:stable-perl
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: timezone
              mountPath: /etc/localtime
              subPath: Asia/Seoul
      volumes:
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo
